# j_staget

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: sample.ipynb
src/j_staget/: __init__.py  _xml.py  cli.py  client.py
src/j_staget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
